| Bug #4801 | SERVER CRASH after with VIEWS + SELECT * FROM DUAL | ||
|---|---|---|---|
| Submitted: | 29 Jul 2004 11:34 | Modified: | 24 Aug 2004 8:57 |
| Reporter: | Georg Richter | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S3 (Non-critical) |
| Version: | 5.0.1 | OS: | |
| Assigned to: | Oleksandr Byelkin | CPU Architecture: | Any |
[29 Jul 2004 11:34]
Georg Richter
[23 Aug 2004 1:51]
Peter Gulutzan
It doesn't have to be "select * from dual". If I say "create view v as select *" the effect is similar.
[23 Aug 2004 11:40]
Oleksandr Byelkin
ChangeSet 1.1725 04/08/23 12:38:55 bell@sanja.is.com.ua +3 -0 fixed error processing of prepare in VIEW creation (BUG#4801)
[24 Aug 2004 8:57]
Oleksandr Byelkin
Thank you for bugreport. Bugfix is pushed in our source repository
