fixed error processing of prepare in VIEW creation (BUG#4801)